# flutter_clipboard

./: .gitignore  BUG_FIXES_SUMMARY.md  CHANGELOG.md  LICENSE  README.md  UPGRADE_SUMMARY.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/net/cubiclab/clipboard/: ClipboardChannelHandler.java  ClipboardPlugin.java
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/net/cubiclab/clipboard/: ClipboardChannelHandler.java  ClipboardPluginRegistrant.java
example/android/app/src/main/java/net/cubiclab/example/: MainActivity.java
example/android/app/src/main/res/xml/: file_paths.xml
example/android/app/src/profile/: AndroidManifest.xml
example/ios/: Podfile
example/ios/Runner/: AppDelegate.h  ClipboardChannelHandler.h  ClipboardChannelHandler.m  ClipboardPluginRegistrant.m
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: core.dart  main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: ClipboardPlugin.swift  MainFlutterWindow.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: manifest.json
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: CMakeLists.txt  Runner.rc  clipboard_plugin.cpp  clipboard_plugin.h  flutter_window.cpp
ios/: clipboard.podspec
ios/Classes/: ClipboardPlugin.swift
ios/clipboard/: Package.swift
ios/clipboard/Sources/clipboard/: ClipboardPlugin.swift
lib/: clipboard.dart
lib/src/: clipboard_web.dart  clipboard_web_stub.dart
macos/: clipboard.podspec
macos/Classes/: ClipboardPlugin.swift
macos/clipboard/: Package.swift
macos/clipboard/Sources/clipboard/: ClipboardPlugin.swift
test/: clipboard_test.dart
windows/: CMakeLists.txt  clipboard_plugin.cpp
windows/include/clipboard/: clipboard_plugin.h
(+2 files in other folders)
